# ml_flow_test

./: .env  .gitignore  LICENSE  mlflow_test.py  pyproject.toml  setup.py
catboost_info/: learn_error.tsv
catboost_info/test/: events.out.tfevents
data/raw/: .gitignore  sample.parquet.dvc  sample_submission.csv.dvc  test.csv.dvc  test.parquet.dvc  train.csv.dvc  train.parquet.dvc
docs/: index.rst
ml_flow_test/: Makefile  README.md  mlflow_test.py  pyproject.toml  setup.py
ml_flow_test/catboost_info/: catboost_training.json  test_error.tsv  time_left.tsv
ml_flow_test/catboost_info/learn/: events.out.tfevents
ml_flow_test/docs/: Makefile  conf.py  make.bat
