[tool.poetry]
name = 'ml_flow_test'
version = '0.1.0'
description = 'ML_flow_test'
authors = ['Andrey Kuznetsov exampel@mail.com']
license = 'none'

[tool.poetry.dependencies]
python = '^3.9'
pandas = '^1.4.2'
scikit-learn = '^1.2.2'
xgboost = '^1.6.0'
lightgbm = '^4.1.0'
catboost = '^1.2.2'
click = '^8.1.2'
dvc = {extras = ['s3'], version = '^2.10.2'}
mlflow = '^2.3.2'
matplotlib = '^3.5.2'
shap = '^0.43.0'
seaborn = "^0.13.0"
imblearn = "^0.0"

[tool.poetry.dev-dependencies]
mypy = '^0.950'
flake8 = '^4.0.1'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = "poetry.core.masonry.api"


